fixed case studies text spacing

--- a/assets/main.css
+++ b/assets/main.css
@@ -325,7 +325,7 @@ li {
 
 .case-study {
     width: max-content;
-    margin: 10px 0;
+    margin: 20px 0;
   }
 
 #case-studies h2 {
